Fetch Photos Framework

--- a/Build_Instagram_With_Firebase/Info.plist
+++ b/Build_Instagram_With_Firebase/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>同意權限以新增您的頭貼</string>
+	<string>同意權限以打開您的相簿</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
